<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AES_About">"AES, Advanced Encryption Standard (AES), также известный как Rijndael — 
симметричный алгоритм блочного шифрования (размер блока 128 бит, 
ключ 128/192/256 бит), принятый в качестве 
стандарта шифрования правительством США по результатам конкурса AES. 
Этот алгоритм хорошо проанализирован и сейчас широко используется, 
как это было с его предшественником DES. Национальный институт 
стандартов и технологий США 
(англ. National Institute of Standards and Technology, NIST) 
 опубликовал спецификацию AES 26 ноября 2001 года после пятилетнего периода, в ходе которого были созданы и оценены 
15 кандидатур. 26 мая 2002 года AES был объявлен стандартом 
шифрования. По состоянию на 2009 год AES является одним из самых 
распространённых алгоритмов симметричного шифрования. 
Поддержка ускорения AES была введена фирмой Intel в семейство 
процессоров x86 начиная с Arrandale в 2010 году, а затем на 
процессорах Sandy Bridge; фирмой AMD - в Bulldozer с 2011 года."</string>
    <string name="About_Program">О программе</string>
    <string name="BlowFish_About">"Blowfish — криптографический алгоритм, 
реализующий блочное симметричное шифрование с переменной 
длиной ключа. Разработан Брюсом Шнайером в 1993 году. 
Представляет собой сеть Фейстеля. Выполнен на простых и быстрых операциях: 
XOR, подстановка, сложение. Является незапатентованным и свободно распространяемым."</string>
    <string name="Caesar_About">"Шифр Цезаря, также известный как шифр сдвига, код Цезаря или сдвиг Цезаря — 
один из самых простых и наиболее широко известных методов шифрования. 
Шифр Цезаря — это вид шифра подстановки, в котором каждый символ в 
открытом тексте заменяется символом, находящимся 
на некотором постоянном числе позиций левее или правее него в алфавите. 
Например, в шифре со сдвигом вправо на 3, \"А\" была 
бы заменена на \"Г\", \"Б\" станет 'Д\", и так далее. 
Шифр назван в честь римского полководца Гая Юлия Цезаря, использовавшего 
его для секретной переписки со своими генералами. 
Шаг шифрования, выполняемый шифром Цезаря, часто включается как 
часть более сложных схем, таких как шифр Виженера. 

Данный алгоритм доступен только для русских букв, но в скором вренени появятся и английские символы."</string>
    <string name="Customization">Интерфейс</string>
    <string name="DES_About">"DES (англ. Data Encryption Standard) — алгоритм 
для симметричного шифрования, разработанный фирмой IBM и утверждённый правительством США в 1977 году как официальный стандарт. 
Размер блока для DES равен 64 битам. 
В основе алгоритма лежит сеть Фейстеля с 16 циклами (раундами) и ключом, имеющим длину 56 бит. 
Алгоритм использует комбинацию нелинейных (S-блоки) и линейных (перестановки E, IP, IP-1) преобразований."</string>
    <string name="SwitchChar_About">"\"Замена букв\" является приятным дополнением к остальным методам шифрования. 
Хоть оно может показаться незначительным, но на самом деле благодаря этому дополнению вы можете усложнить свой шифр. 
Добавив в него частицу запутанности…"</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_my_programm">"Благодаря программе \"Criptographer\" вы можете преобразовывать ваши секретные сообщения в различного рода шифры. 
Вам необходимо выбрать метод шифрования и придумать ключ. 
В этой версии(1.0) программы предоставлено: 
3 вида шифрования, 
2 алгоритма и, 
как дополнение, Замена букв. 

Т.к. у вас Android ниже 8.0 версии, 
шифры \"AES\" и \"BlowFish\" вам недоступны.
"</string>
    <string name="about_my_programm_for_Android8_And_Up">"Благодаря программе \"Criptographer\" вы можете преобразовывать ваши секретные сообщения в различного рода шифры. 
Вам необходимо выбрать метод шифрования и придумать ключ. 
В этой версии(1.0) программы предоставлено: 
3 вида шифрования, 
2 алгоритма и, 
как дополнение, Замена букв.
"</string>
    <string name="algorithm_Aes">Шифрование AES</string>
    <string name="algorithm_BlowFish">Шифрование BlowFish</string>
    <string name="algorithm_Caesar">Алгоритм Цезаря</string>
    <string name="algorithm_Des">Шифрование DES</string>
    <string name="algorithm_Switch_Char">Замена букв</string>
    <string name="algorithm_eXT">Алгоритм eXT*</string>
    <string name="app_name">MyCryptographer</string>
    <string name="battery_saver_theme">Battery saver theme</string>
    <string name="clear">Очистить</string>
    <string name="copy">Скопировать</string>
    <string name="dark_theme">Light theme</string>
    <string name="decrypt">Дешифровать</string>
    <string name="eXT_About">"Это мой собственный алгоритм шифрования!!! 
Если вы хотите зашифровать сообщение, то вам нужно: 
Выбрать метод(четный или нечетный), потом ввести пароль и выбрать один из предложенных ключей. 
Для дешифровки вы должны: 
Выбрать противоположный метод, который у вас был при шифровании. 
Например, у вас был четный, для дешифровки нужен нечетный, и наоборот. 
Алгоритм еще находится в разработке…"</string>
    <string name="encrypt">Зашифровать</string>
    <string name="light_theme">Dark theme</string>
    <string name="main_menu_text">code</string>
    <string name="paste">Вставить</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="system_theme">Use system theme</string>
    <string name="theme_title">Themes:</string>
    <string name="Ваш_шифр">Ваш шифр</string>
    <string name="Введите_Пароль">Введите Пароль</string>
    <string name="Введите_текст">Введите текст</string>
</resources>
