<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/btnEXT" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_eXT" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.192" />
    <Button android:id="@id/btnCaesar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_Caesar" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintTop_toBottomOf="@id/btnEXT" />
    <Button android:id="@id/btnDES" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_Des" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnBlowFish" />
    <Button android:id="@id/btnAES" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_Aes" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@id/btnCaesar" app:layout_constraintStart_toStartOf="@id/btnCaesar" app:layout_constraintTop_toBottomOf="@id/btnCaesar" />
    <Button android:id="@id/btnBlowFish" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_BlowFish" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnAES" />
    <Button android:id="@id/btnSwitchChar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/algorithm_Switch_Char" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnDES" />
    <Button android:id="@id/btnCustom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Customization" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnSwitchChar" />
    <Button android:id="@id/btnAboutProgram" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/About_Program" android:onClick="ClickMainMenu" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnCustom" />
</androidx.constraintlayout.widget.ConstraintLayout>