<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/BtnInfo" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginBottom="96.0dip" android:layout_marginStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/input_text" app:layout_constraintStart_toEndOf="@id/input_text" app:srcCompat="@android:drawable/ic_menu_info_details" />
    <EditText android:id="@id/input_text" android:layout_width="160.0dip" android:layout_height="89.0dip" android:layout_marginTop="76.0dip" android:hint="@string/Введите_текст" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:id="@id/password" android:layout_width="160.0dip" android:layout_height="99.0dip" android:layout_marginTop="15.0dip" android:hint="@string/Введите_Пароль" app:layout_constraintEnd_toEndOf="@id/input_text" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/input_text" app:layout_constraintTop_toBottomOf="@id/input_text" />
    <TextView android:gravity="center" android:id="@id/secret_text" android:layout_width="160.0dip" android:layout_height="95.0dip" android:layout_marginTop="15.0dip" android:hint="@string/Ваш_шифр" app:layout_constraintEnd_toEndOf="@id/password" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/password" app:layout_constraintTop_toBottomOf="@id/password" />
    <Button android:id="@id/BtnEncrypt" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginLeft="64.0dip" android:layout_marginTop="20.0dip" android:text="@string/encrypt" android:textAllCaps="false" android:layout_marginStart="64.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/secret_text" />
    <Button android:id="@id/BtnDecrypt" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="64.0dip" android:text="@string/decrypt" android:textAllCaps="false" android:layout_marginEnd="64.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.93" app:layout_constraintStart_toEndOf="@id/BtnEncrypt" app:layout_constraintTop_toBottomOf="@id/secret_text" />
    <Button android:id="@id/BtnCopyText" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="Скопировать" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@id/BtnEncrypt" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/BtnEncrypt" app:layout_constraintTop_toBottomOf="@id/BtnEncrypt" />
    <Button android:id="@id/BtnPasteText" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="Вставить" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="@id/BtnCopyText" app:layout_constraintEnd_toEndOf="@id/BtnDecrypt" app:layout_constraintStart_toStartOf="@id/BtnDecrypt" />
    <Button android:id="@id/BtnClearText" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="Очистить" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/BtnPasteText" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/BtnCopyText" app:layout_constraintTop_toBottomOf="@id/BtnCopyText" app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>